
* SOLR-17094: Close objects contained inside an ObjectCache.  (Vincent Primault)

* SOLR-16577: Ensure core load failures are always logged. (Haythem Khiri, David Smiley)

* SOLR-17063: Do not retain log param references in LogWatcher (Michael Gibney)

* SOLR-17066: SolrClient builders now allow users to specify a "default" collection or core
  using the `withDefaultCollection` method.  This is preferable to including the collection
  in the base URL accepted by certain client implementations. (Jason Gerlowski)

* SOLR-15960: Unified use of system properties and environment variables (janhoy)

* SOLR-16397: The MERGEINDEXES v2 endpoint has been updated to be more REST-ful.
  MERGEINDEXES is now available at `POST /api/cores/coreName/merge-indices` (Sanjay Dutt via Jason Gerlowski)

Optimizations
---------------------
* SOLR-17084: LBSolrClient (used by CloudSolrClient) now returns the count of core tracked as not live AKA zombies
  instead of the full list of cores.  This list is potentially as long as the number of cores.  When there are many
  cores, this leads to high CPU and memory usage. (Gilles Bellaton, David Smiley)

* SOLR-17036: UpdateLog lazy creates VersionBucket large array, and VersionBucket do not keep the highest version anymore.
  This optimization reduces the memory usage, specially when the SolrCore is not used for indexing (Bruno Roustant)

Bug Fixes
---------------------
* SOLR-6853: Allow '/' characters in the text managed by Managed Resources API. (Nikita Rusetskii via Eric Pugh)

* SOLR-17039: Entropy calculation in bin/solr script fails in Docker due to missing 'bc' cmd (janhoy)

* SOLR-17045: DenseVectorField w/ vectorDimension > 1024 now work automatically with _default configset, due to
  implicit use of SchemaCodecFactory.  (hossman)

* SOLR-10653: When there's a UUIDField in the schema and atomic update touches another field
  the error occurs when leader updates replica (Mikhail Khludnev)
